--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/multer": "^1.4.7",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.4",
     "express": "^4.17.3",
     "multer": "^1.4.4",
@@ -21,7 +21,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
