Refactoring: Adding <infra> folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "shared/*"
       ],
       "@errors/*": [
-        "errors/*"
+        "shared/errors/*"
       ],
       "@utils/*": [
         "utils/*"
