feat: Adding Cars table

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "shared/errors/*"
       ],
       "@utils/*": [
-        "utils/*"
+        "shared/utils/*"
       ]
     },
     "resolveJsonModule": true,
